<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="ReturnFormBinding">

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout"
        tools:context="cj_server.com.itmonitor.ReturnForm">

        <include
            layout="@layout/toolbar"
            android:id="@+id/included"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibuttonLocation"
                android:background="@drawable/location_off" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/ibuttonLocation"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/locationNull" />


        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_organization_name"
                    style="@style/textInputLayout_style">

                    <EditText
                        android:id="@+id/ed_organization_name"
                        android:hint="@string/organization_name_Hint"
                        style="@style/edit_text_style"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout_style"
                    android:id="@+id/til_branch">

                    <EditText
                        style="@style/edit_text_style"
                        android:hint="@string/branch_hint"
                        android:id="@+id/ed_branch"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout_style"
                    android:id="@+id/til_bulding">

                    <EditText
                        style="@style/edit_text_style"
                        android:hint="@string/building_name"
                        android:id="@+id/ed_building_name"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout_style"
                    android:id="@+id/til_floor_no">

                    <EditText
                        style="@style/edit_text_style"
                        android:hint="@string/floor_hint"
                        android:inputType="number"
                        android:id="@+id/ed_floor_no"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout_style"
                    android:id="@+id/til_telephone">

                    <EditText
                        style="@style/edit_text_style"
                        android:hint="@string/telephone_hint"
                        android:inputType="number"
                        android:id="@+id/ed_tel"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textInputLayout_style"
                    android:id="@+id/til_date">

                    <EditText
                        style="@style/edit_text_style"
                        android:hint="@string/date_hint"
                        android:inputType="date"
                        android:id="@+id/ed_date"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/btnSave"
                    android:background="@drawable/buttondrawable"
                    android:text="@string/btn_save"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</layout>
