<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class ="SignUpBinding">

    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:id="@+id/layout"
    android:layout_height="match_parent"
    tools:context="cj_server.com.itmonitor.SignUp">
    <include
        layout="@layout/toolbar"
        android:id="@+id/included"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_student_name"
                    style="@style/textInputLayout_style">

                    <EditText
                        android:id="@+id/ed_student_name"
                        android:hint="@string/student_name_hint"
                        style="@style/edit_text_style"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_registration_no"
                    style="@style/textInputLayout_style">

                    <EditText
                        android:id="@+id/ed_reg_no"
                        android:hint="@string/registration_no_hint"
                        style="@style/edit_text_style"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_mobile"
                    style="@style/textInputLayout_style">

                    <EditText
                        android:id="@+id/ed_mobile_no"
                        android:hint="@string/mobile_no_hint"
                        android:inputType="number"
                        style="@style/edit_text_style"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email_address"
                    style="@style/textInputLayout_style">

                    <EditText
                        android:id="@+id/ed_email_address"
                        android:hint="@string/email_address_hint"
                        style="@style/edit_text_style"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/textInputLayout_style">

                    <EditText
                        android:id="@+id/ed_password"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        style="@style/edit_text_style"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/btnSignUp"
                    android:background="@drawable/buttondrawable"
                    android:text="@string/btn_sign_up"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </ScrollView>

</LinearLayout>
</layout>
