<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data class="LoginClass">

    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:background="@drawable/bg"
    tools:context="cj_server.com.itmonitor.Login">

    <include
        layout="@layout/toolbar"
        android:id="@+id/included"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="20dp">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">


                <!--<ImageView android:src="@drawable/logob"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="60dp"-->
                    <!--android:layout_marginBottom="24dp"-->
                    <!--android:layout_gravity="center_horizontal" />-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email_address"
                    style="@style/textInputLayout_style">

                    <EditText
                        android:id="@+id/ed_email_address"
                        android:hint="@string/email_address_hint"
                        style="@style/edit_text_style"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/textInputLayout_style">
                    <EditText
                        android:id="@+id/ed_password"
                        android:hint="@string/password_hint"
                        style="@style/password_text_style"/>
                </android.support.design.widget.TextInputLayout>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="end"
                    android:textColor="@color/indigo"
                    android:id="@+id/ch_show_password"
                    android:text="@string/showPassword"/>


                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/btnSignIn"
                    android:layout_gravity="center"
                    android:background="@drawable/buttondrawable"
                    android:text="@string/btn_sign_in"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_forgot_password"
                    android:padding="5dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center"
                    android:textColor="@color/indigo"
                    android:textSize="18sp"
                    android:text="@string/forgotPassword"/>

                <TextView android:id="@+id/link_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/signup_link"
                    android:gravity="center"
                    android:textColor="@color/indigo"
                    android:textSize="18sp"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>


    </ScrollView>

</LinearLayout>
</layout>
